packages/lab/src/layout/FlexLayout/FlexLayout.css
/* VARIABLES */
.uitkFlexLayout {
  --uitkFlexLayout-gap-multiplier: 1;
  --uitkFlexLayout-layout-display: flex;
  --uitkFlexLayout-direction: row;
  --uitkFlexLayout-wrap: wrap;
  --uitkFlexLayout-justify: flex-start;
  --uitkFlexLayout-align: stretch;
  --uitkFlexLayout-separator: var(--uitk-separable-border-width);
  --uitkFlexLayout-gap: calc(var(--uitk-spacing-unit) * var(--uitkFlexLayout-gap-multiplier) + var(--uitkFlexLayout-separator));
}

.uitkFlexLayout {
  gap: var(--uitkFlexLayout-gap);
  display: var(--uitkFlexLayout-layout-display);
  flex-flow: var(--uitkFlexLayout-direction) var(--uitkFlexLayout-wrap);
  justify-content: var(--uitkFlexLayout-justify);
  align-items: var(--uitkFlexLayout-align);
  overflow: hidden;
}

.uitkFlexLayout-separator > *:not(:last-child)::after {
  content: "";
  position: absolute;
  background-color: var(--uitk-separable-border-color-2);
}

.uitkFlexLayout-separator-row > *:not(:last-child)::after {
  width: var(--uitkFlexLayout-separator);
  top: 0;
  height: 100%;
}
.uitkFlexLayout-separator-row-start > *:not(:last-child)::after {
  right: calc(var(--uitkFlexLayout-separator) * -1);
}
.uitkFlexLayout-separator-row-center > *:not(:last-child)::after {
  right: calc(var(--uitkFlexLayout-separator) * -1 + var(--uitkFlexLayout-gap) / 2 * -1);
}
.uitkFlexLayout-separator-row-end > *:not(:last-child)::after {
  right: calc(var(--uitkFlexLayout-gap) * -1);
}

.uitkFlexLayout-separator-column > *:not(:last-child)::after {
  height: var(--uitkFlexLayout-separator);
  width: 100%;
}
.uitkFlexLayout-separator-column-start > *:not(:last-child)::after {
  bottom: calc(var(--uitkFlexLayout-separator) * -1);
}
.uitkFlexLayout-separator-column-center > *:not(:last-child)::after {
  bottom: calc(var(--uitkFlexLayout-separator) * -1 + var(--uitkFlexLayout-gap) / 2 * -1);
}
.uitkFlexLayout-separator-column-end > *:not(:last-child)::after {
  bottom: calc(var(--uitkFlexLayout-gap) * -1);
}

